Fixed overflow scrolling

--- a/docs/theme/stylesheets/spec.css
+++ b/docs/theme/stylesheets/spec.css
@@ -167,7 +167,7 @@
   /* Primary sidebar */
   .md-sidebar--primary {
     position: absolute;
-    top: 22px !important;
+    top: 1.1rem !important;
     left: 0;
     z-index: 1;
     display: flex;
@@ -198,6 +198,8 @@
   .md-nav--primary .md-nav__list {
     flex: 1;
     padding: 1rem 0;
+    max-height: calc(100vh - 3.175rem);
+    overflow: auto;
   }
 
   /* Navigation titles */
